--- a/GameData/ModularClimateWeatherSystems/Localization/en-us.cfg
+++ b/GameData/ModularClimateWeatherSystems/Localization/en-us.cfg
@@ -56,5 +56,11 @@ Localization
         #LOC_MCWS_lonlatunit = Longitude/Latitude Units
         #LOC_MCWS_devmode = Developer Mode
         #LOC_MCWS_devmodetip = If enabled, the GUI will display a bunch of raw information.
+
+        #LOC_MCWS_disablewind = Disable Wind When Stationary
+        #LOC_MCWS_enablewind = Enable Wind When Stationary
+
+        #LOC_MCWS_enableindicators = Enable Wind-Adjusted Markers
+        #LOC_MCWS_disableindicators = Disable Wind-Adjusted Markers
     }
 }
