--- a/GameData/ModularClimateWeatherSystems/MCWS_Settings.cfg
+++ b/GameData/ModularClimateWeatherSystems/MCWS_Settings.cfg
@@ -8,6 +8,11 @@ MCWS_SETTINGS
 
     DisableAdjustedProgradeIndicators = false
     //If set to true, this will disable the wind-adjusted prograde/retrograde indicators. (Default is false)
+    //This setting can also be toggled through MCWS's Flight GUI
+
+    DisableWindWhenStationary = false
+    //If enabled, wind forces will be disabled on craft that are landed or splashed and moving at less than 5m/s (Default is false)
+    //This setting can also be toggled through MCWS's Flight GUI
     
     DeveloperMode = false
     //If set to true, MCWS's UI will display a lot of raw information used for testing and debugging. (Default is false)
