--- a/GameData/MCWS_PlanetData/Binary/Duna/Duna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Duna/Duna.cfg
@@ -1,4 +1,4 @@
-MCWS_EXOPLASIM_DATA
+MCWS_DATA
 {
     body = Duna
     
@@ -8,18 +8,28 @@ MCWS_EXOPLASIM_DATA
         path_Y = MCWS_PlanetData/Binary/Duna/wa.npy
         path_Z = MCWS_PlanetData/Binary/Duna/ua.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 6
         timesteps = 24
         timestepLength = 3600
+        initialOffset = 128
         scaleFactor = 2
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Temperature_Data
     {
         path = MCWS_PlanetData/Binary/Duna/ta.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 6
         timesteps = 24
         timestepLength = 3600
+        initialOffset = 128
         scaleFactor = 2
+        virtualTopLayer = true
+        invertAltitude = true
     }
 }
