--- a/GameData/MCWS_PlanetData/Binary/Eve/Eve.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Eve/Eve.cfg
@@ -1,4 +1,4 @@
-MCWS_EXOPLASIM_DATA
+MCWS_DATA
 {
     body = Eve
     
@@ -8,9 +8,14 @@ MCWS_EXOPLASIM_DATA
         path_Y = MCWS_PlanetData/Binary/Eve/wa.npy
         path_Z = MCWS_PlanetData/Binary/Eve/ua.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 2700
+        initialOffset = 128
         scaleFactor = 2.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
 }
