--- a/GameData/MCWS_PlanetData/Binary/Kerbin/Kerbin.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Kerbin/Kerbin.cfg
@@ -1,4 +1,4 @@
-MCWS_EXOPLASIM_DATA
+MCWS_DATA
 {
     body = Kerbin
     
@@ -8,27 +8,42 @@ MCWS_EXOPLASIM_DATA
         path_Y = MCWS_PlanetData/Binary/Kerbin/wa.npy
         path_Z = MCWS_PlanetData/Binary/Kerbin/ua.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 2700
+        initialOffset = 128
         scaleFactor = 2.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Temperature_Data
     {
         path = MCWS_PlanetData/Binary/Kerbin/ta.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 2700
+        initialOffset = 128
         scaleFactor = 2.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Pressure_Data
     {
         path = MCWS_PlanetData/Binary/Kerbin/hlpr.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 11
         timesteps = 24
         timestepLength = 2700
+        initialOffset = 128
         scaleFactor = 2.7
+        virtualTopLayer = true
+        invertAltitude = true
     }
 }
