--- a/GameData/MCWS_PlanetData/Binary/Laythe/Laythe.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Laythe/Laythe.cfg
@@ -1,4 +1,4 @@
-MCWS_EXOPLASIM_DATA
+MCWS_DATA
 {
     body = Laythe
     
@@ -8,27 +8,42 @@ MCWS_EXOPLASIM_DATA
         path_Y = MCWS_PlanetData/Binary/Laythe/wa.npy
         path_Z = MCWS_PlanetData/Binary/Laythe/ua.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 3600
+        initialOffset = 128
         scaleFactor = 1.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Temperature_Data
     {
         path = MCWS_PlanetData/Binary/Laythe/ta.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 3600
+        initialOffset = 128
         scaleFactor = 1.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Pressure_Data
     {
         path = MCWS_PlanetData/Binary/Laythe/hlpr.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 11
         timesteps = 24
         timestepLength = 3600
+        initialOffset = 128
         scaleFactor = 1.6
+        virtualTopLayer = true
+        invertAltitude = true
     }
 }
