--- a/GameData/MCWS_PlanetData/Binary/Suluco/Suluco.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Suluco/Suluco.cfg
@@ -1,4 +1,4 @@
-MCWS_EXOPLASIM_DATA
+MCWS_DATA
 {
     body = Suluco
     
@@ -8,27 +8,42 @@ MCWS_EXOPLASIM_DATA
         path_Y = MCWS_PlanetData/Binary/Suluco/wa.npy
         path_Z = MCWS_PlanetData/Binary/Suluco/ua.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 3000
+        initialOffset = 128
         scaleFactor = 2.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Temperature_Data
     {
         path = MCWS_PlanetData/Binary/Suluco/ta.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 10
         timesteps = 24
         timestepLength = 3000
+        initialOffset = 128
         scaleFactor = 2.5
+        virtualTopLayer = true
+        invertAltitude = true
     }
     Pressure_Data
     {
         path = MCWS_PlanetData/Binary/Suluco/hlpr.npy
 
+        sizeLon = 64
+        sizeLat = 32
         sizeAlt = 11
         timesteps = 24
         timestepLength = 3000
+        initialOffset = 128
         scaleFactor = 2.7
+        virtualTopLayer = true
+        invertAltitude = true
     }
 }
