--- a/GameData/MCWS_PlanetData/Binary/Eve/Eve.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Eve/Eve.cfg
@@ -15,7 +15,7 @@ MCWS_DATA
         timestepLength = 2700
         initialOffset = 128
         scaleFactor = 2.5
-        virtualTopLayer = true
+        modelTop = 36000
         invertAltitude = true
     }
 }
