--- a/GameData/MCWS_PlanetData/Binary/Laythe/Laythe.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Laythe/Laythe.cfg
@@ -15,7 +15,7 @@ MCWS_DATA
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        virtualTopLayer = true
+        modelTop = 33000
         invertAltitude = true
     }
     Temperature_Data
@@ -29,7 +29,7 @@ MCWS_DATA
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        virtualTopLayer = true
+        modelTop = 33000
         invertAltitude = true
     }
     Pressure_Data
@@ -43,7 +43,7 @@ MCWS_DATA
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.6
-        virtualTopLayer = true
+        modelTop = 31250
         invertAltitude = true
     }
 }
