--- a/GameData/MCWS_PlanetData/Binary/Duna/Duna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Duna/Duna.cfg
@@ -15,7 +15,7 @@ MCWS_DATA
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 2
-        virtualTopLayer = true
+        modelTop = 25000
         invertAltitude = true
     }
     Temperature_Data
@@ -29,7 +29,7 @@ MCWS_DATA
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 2
-        virtualTopLayer = true
+        modelTop = 25000
         invertAltitude = true
     }
 }
