--- a/GameData/MCWS_PlanetData/Binary/Suluco/Suluco.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Suluco/Suluco.cfg
@@ -15,7 +15,7 @@ MCWS_DATA
         timestepLength = 3000
         initialOffset = 128
         scaleFactor = 2.5
-        virtualTopLayer = true
+        modelTop = 26000
         invertAltitude = true
     }
     Temperature_Data
@@ -29,7 +29,7 @@ MCWS_DATA
         timestepLength = 3000
         initialOffset = 128
         scaleFactor = 2.5
-        virtualTopLayer = true
+        modelTop = 26000
         invertAltitude = true
     }
     Pressure_Data
@@ -43,7 +43,7 @@ MCWS_DATA
         timestepLength = 3000
         initialOffset = 128
         scaleFactor = 2.7
-        virtualTopLayer = true
+        modelTop = 24000
         invertAltitude = true
     }
 }
