--- a/ModularClimateWeatherSystems/ModularClimateWeatherSystems.csproj
+++ b/ModularClimateWeatherSystems/ModularClimateWeatherSystems.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="MCWS_BinAndFlowmapReader.cs" />
     <Compile Include="MCWS_CustomSettings.cs" />
+    <Compile Include="MCWS_BodyData.cs" />
     <Compile Include="MCWS_Startup_And_Utils.cs" />
     <Compile Include="MCWS_API.cs" />
     <Compile Include="MCWS_FlightHandler.cs" />
