New data, further refactoring

--- a/ModularClimateWeatherSystems/ModularClimateWeatherSystems.csproj
+++ b/ModularClimateWeatherSystems/ModularClimateWeatherSystems.csproj
@@ -82,12 +82,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MCWS_BinAndFlowmapReader.cs" />
+    <Compile Include="MCWS_ConfigReader.cs" />
     <Compile Include="MCWS_CustomSettings.cs" />
     <Compile Include="MCWS_BodyData.cs" />
-    <Compile Include="MCWS_Startup_And_Utils.cs" />
+    <Compile Include="MCWS_Startup.cs" />
     <Compile Include="MCWS_API.cs" />
     <Compile Include="MCWS_FlightHandler.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="WindAdjustedProgradeIndicator.cs" />
     <Compile Include="MCWS_UnityGUI.cs" />
     <Compile Include="FlightDynamicsOverrides.cs" />
