modify data configs

--- a/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Mehtna/Mehtna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Mehtna/Mehtna.cfg
@@ -1,6 +1,7 @@
 MCWS_DATA:NEEDS[KcalbelohSystem]
 {
     body = Mehtna
+    tag = KcalbelohSystem
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
