--- a/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Patches/KcalbelohHomeswitch.cfg
+++ b/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Patches/KcalbelohHomeswitch.cfg
@@ -2,32 +2,33 @@
 {
 	#@KcalbelohSystemSettings {}
 }
-@MCWS_DATA:FINAL:NEEDS[KcalbelohSystem]
+@MCWS_DATA:FINAL
 {
 	!KcalbelohSystemSettings {}
 }
 
-@MCWS_DATA:HAS[#body[Kerbin],@KcalbelohSystemSettings:HAS[#HomeSwitchEnabled[?rue]]]:LAST[KcalbelohSystem]
+@MCWS_DATA:HAS[#body[Kerbin],@KcalbelohSystemSettings:HAS[#HomeSwitchEnabled[?rue]]]:AFTER[KcalbelohSystem]
 {
     @body = Nibrek
+    %tag = KcalbelohSystem
 }
 
-@MCWS_DATA:HAS[#body[Suluco]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Suluco]]]:LAST[KcalbelohSystem]
+@MCWS_DATA:HAS[#body[Suluco]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Suluco]]]:AFTER[KcalbelohSystem]
 {
     @body = Kerbin
 }
 
-@MCWS_DATA:HAS[#body[Efil]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Efil]]]:LAST[KcalbelohSystem]
+@MCWS_DATA:HAS[#body[Efil]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Efil]]]:AFTER[KcalbelohSystem]
 {
     @body = Kerbin
 }
 
-@MCWS_DATA:HAS[#body[Mehtna]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Mehtna]]]:LAST[KcalbelohSystem]
+@MCWS_DATA:HAS[#body[Mehtna]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Mehtna]]]:AFTER[KcalbelohSystem]
 {
     @body = Kerbin
 }
 
-@MCWS_DATA:HAS[#body[Rouqea]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Rouqea]]]:LAST[KcalbelohSystem]
+@MCWS_DATA:HAS[#body[Rouqea]&@KcalbelohSystemSettings:HAS[#HomeSwitch[Rouqea]]]:AFTER[KcalbelohSystem]
 {
     @body = Kerbin
 }
