--- a/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Rouqea/Rouqea.cfg
+++ b/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Rouqea/Rouqea.cfg
@@ -1,6 +1,7 @@
 MCWS_DATA:NEEDS[KcalbelohSystem]
 {
     body = Rouqea
+    tag = KcalbelohSystem
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
@@ -18,6 +19,7 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         modelTop = 23000
         invertAltitude = true
         verticalWindMultiplier = 5000
+        longitudeOffset = 53.6
     }
     Temperature_Data
     {
@@ -30,8 +32,9 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         timestepLength = 3000
         initialOffset = 128
         scaleFactor = 1.4
-        modelTop = 23000
+        modelTop = 60000
         invertAltitude = true
+        longitudeOffset = 53.6
     }
     Pressure_Data
     {
@@ -46,5 +49,6 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         scaleFactor = 1.4
         modelTop = 23000
         invertAltitude = true
+        longitudeOffset = 53.6
     }
 }
