--- a/GameData/MCWS_PlanetData/Binary/TidallyLockedKerbin/Kerbin/TLKerbin.cfg
+++ b/GameData/MCWS_PlanetData/Binary/TidallyLockedKerbin/Kerbin/TLKerbin.cfg
@@ -17,6 +17,7 @@
         modelTop = 22000
         invertAltitude = true
         verticalWindMultiplier = 5000
+        longitudeOffset = 180
     }
 
     !Temperature_Data {}
@@ -33,6 +34,7 @@
         scaleFactor = 1.4
         modelTop = 22000
         invertAltitude = true
+        longitudeOffset = 180
     }
 
     !Pressure_Data {}
@@ -49,5 +51,6 @@
         scaleFactor = 1.4
         modelTop = 22000
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
