--- a/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Mehtna/Mehtna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/KcalbelohSystem/Mehtna/Mehtna.cfg
@@ -19,6 +19,7 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         modelTop = 33500
         invertAltitude = true
         verticalWindMultiplier = 5000
+        longitudeOffset = 180
     }
     Temperature_Data
     {
@@ -33,6 +34,7 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         scaleFactor = 1.45
         modelTop = 33500
         invertAltitude = true
+        longitudeOffset = 180
     }
     Pressure_Data
     {
@@ -47,5 +49,6 @@ MCWS_DATA:NEEDS[KcalbelohSystem]
         scaleFactor = 1.45
         modelTop = 33500
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
