--- a/GameData/MCWS_PlanetData/Binary/OPM/Tekto/Tekto.cfg
+++ b/GameData/MCWS_PlanetData/Binary/OPM/Tekto/Tekto.cfg
@@ -1,7 +1,7 @@
 MCWS_DATA
 {
-    body = Eve
-    tag = Stock
+    body = Tekto
+    tag = OPM
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
@@ -18,6 +18,7 @@ MCWS_DATA
         scaleFactor = 1.4
         modelTop = 35000
         invertAltitude = true
+        longitudeOffset = 180
     }
     
     Pressure_Data
@@ -33,5 +34,6 @@ MCWS_DATA
         scaleFactor = 1.4
         modelTop = 32000
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
