--- a/GameData/MCWS_PlanetData/Binary/Stock/Duna/Duna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Duna/Duna.cfg
@@ -18,6 +18,7 @@ MCWS_DATA
         scaleFactor = 1.5
         modelTop = 22000
         invertAltitude = true
+        longitudeOffset = 180
     }
     Temperature_Data
     {
@@ -32,6 +33,7 @@ MCWS_DATA
         scaleFactor = 1.5
         modelTop = 22000
         invertAltitude = true
+        longitudeOffset = 180
     }
 
     Pressure_Data
@@ -47,5 +49,6 @@ MCWS_DATA
         scaleFactor = 1.6
         modelTop = 21000
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
