--- a/GameData/MCWS_PlanetData/Binary/Stock/Eve/Eve.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Eve/Eve.cfg
@@ -18,6 +18,7 @@ MCWS_DATA
         scaleFactor = 1.9
         modelTop = 30000
         invertAltitude = true
+        longitudeOffset = 180
     }
     
     Pressure_Data
@@ -33,5 +34,6 @@ MCWS_DATA
         scaleFactor = 1.35
         modelTop = 29000
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
