--- a/GameData/MCWS_PlanetData/Binary/Stock/Kerbin/Kerbin.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Kerbin/Kerbin.cfg
@@ -18,6 +18,7 @@ MCWS_DATA
         scaleFactor = 1.375
         modelTop = 28000
         invertAltitude = true
+        longitudeOffset = 180
     }
     Temperature_Data
     {
@@ -32,6 +33,7 @@ MCWS_DATA
         scaleFactor = 1.375
         modelTop = 28000
         invertAltitude = true
+        longitudeOffset = 180
     }
     Pressure_Data
     {
@@ -46,5 +48,6 @@ MCWS_DATA
         scaleFactor = 1.35
         modelTop = 23000
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
