--- a/GameData/MCWS_PlanetData/Binary/Stock/Laythe/Laythe.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Laythe/Laythe.cfg
@@ -18,6 +18,7 @@ MCWS_DATA
         scaleFactor = 1.5
         modelTop = 33000
         invertAltitude = true
+        longitudeOffset = 180
     }
     Temperature_Data
     {
@@ -32,6 +33,7 @@ MCWS_DATA
         scaleFactor = 1.5
         modelTop = 33000
         invertAltitude = true
+        longitudeOffset = 180
     }
     Pressure_Data
     {
@@ -46,5 +48,6 @@ MCWS_DATA
         scaleFactor = 1.6
         modelTop = 31250
         invertAltitude = true
+        longitudeOffset = 180
     }
 }
