add blending of temperatures, fix a FAR bug

--- a/GameData/MCWS_PlanetData/Binary/Stock/Duna/Duna.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Duna/Duna.cfg
@@ -34,6 +34,7 @@ MCWS_DATA
         modelTop = 22000
         invertAltitude = true
         longitudeOffset = 180
+        blendTemperatureWithStock = true
     }
 
     Pressure_Data
