--- a/GameData/MCWS_PlanetData/Binary/Stock/Kerbin/Kerbin.cfg
+++ b/GameData/MCWS_PlanetData/Binary/Stock/Kerbin/Kerbin.cfg
@@ -34,6 +34,7 @@ MCWS_DATA
         modelTop = 28000
         invertAltitude = true
         longitudeOffset = 180
+        blendTemperatureWithStock = true
     }
     Pressure_Data
     {
