Restructure planetdata, add new map stuffs

--- a/Extras/MCWS_PlanetData_KcalbelohSystem/Suluco/Suluco.cfg
+++ b/Extras/MCWS_PlanetData_KcalbelohSystem/Suluco/Suluco.cfg
@@ -1,52 +1,52 @@
-MCWS_DATA
+MCWS_DATA:NEEDS[KcalbelohSystem]
 {
-    body = Kerbin
-    tag = Stock
+    body = Suluco
+    tag = KcalbelohSystem
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
-        path_X = MCWS_PlanetData/Binary/Stock/Kerbin/va.npy
-        path_Y = MCWS_PlanetData/Binary/Stock/Kerbin/wa.npy
-        path_Z = MCWS_PlanetData/Binary/Stock/Kerbin/ua.npy
+        path_X = MCWS_PlanetData_KcalbelohSystem/Suluco/va.npy
+        path_Y = MCWS_PlanetData_KcalbelohSystem/Suluco/wa.npy
+        path_Z = MCWS_PlanetData_KcalbelohSystem/Suluco/ua.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 10
         timesteps = 24
-        timestepLength = 2700
+        timestepLength = 3000
         initialOffset = 128
-        scaleFactor = 1.375
-        modelTop = 28000
+        scaleFactor = 1.6
+        modelTop = 26000
         invertAltitude = true
+        verticalWindMultiplier = 5000
         longitudeOffset = 180
     }
     Temperature_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Kerbin/ta.npy
+        path = MCWS_PlanetData_KcalbelohSystem/Suluco/ta.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 10
         timesteps = 24
-        timestepLength = 2700
+        timestepLength = 3000
         initialOffset = 128
-        scaleFactor = 1.375
-        modelTop = 28000
+        scaleFactor = 1.6
+        modelTop = 26000
         invertAltitude = true
         longitudeOffset = 180
-        blendTemperatureWithStock = true
     }
     Pressure_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Kerbin/hlpr.npy
+        path = MCWS_PlanetData_KcalbelohSystem/Suluco/hlpr.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 11
         timesteps = 24
-        timestepLength = 2700
+        timestepLength = 3000
         initialOffset = 128
-        scaleFactor = 1.35
+        scaleFactor = 1.6
         modelTop = 23000
         invertAltitude = true
         longitudeOffset = 180
