--- a/Extras/MCWS_PlanetData_Stock/Laythe/Laythe.cfg
+++ b/Extras/MCWS_PlanetData_Stock/Laythe/Laythe.cfg
@@ -1,54 +1,52 @@
 MCWS_DATA
 {
-    body = Duna
+    body = Laythe
     tag = Stock
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
-        path_X = MCWS_PlanetData/Binary/Stock/Duna/va.npy
-        path_Y = MCWS_PlanetData/Binary/Stock/Duna/wa.npy
-        path_Z = MCWS_PlanetData/Binary/Stock/Duna/ua.npy
+        path_X = MCWS_PlanetData_Stock/Laythe/va.npy
+        path_Y = MCWS_PlanetData_Stock/Laythe/wa.npy
+        path_Z = MCWS_PlanetData_Stock/Laythe/ua.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 6
+        sizeAlt = 10
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        modelTop = 22000
+        modelTop = 33000
         invertAltitude = true
         longitudeOffset = 180
     }
     Temperature_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Duna/ta.npy
+        path = MCWS_PlanetData_Stock/Laythe/ta.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 6
+        sizeAlt = 10
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        modelTop = 22000
+        modelTop = 33000
         invertAltitude = true
         longitudeOffset = 180
-        blendTemperatureWithStock = true
     }
-
     Pressure_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Duna/hlpr.npy
+        path = MCWS_PlanetData_Stock/Laythe/hlpr.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 7
+        sizeAlt = 11
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.6
-        modelTop = 21000
+        modelTop = 31250
         invertAltitude = true
         longitudeOffset = 180
     }
