--- a/Extras/MCWS_PlanetData_Stock/Duna/Duna.cfg
+++ b/Extras/MCWS_PlanetData_Stock/Duna/Duna.cfg
@@ -1,52 +1,54 @@
 MCWS_DATA
 {
-    body = Laythe
+    body = Duna
     tag = Stock
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
-        path_X = MCWS_PlanetData/Binary/Stock/Laythe/va.npy
-        path_Y = MCWS_PlanetData/Binary/Stock/Laythe/wa.npy
-        path_Z = MCWS_PlanetData/Binary/Stock/Laythe/ua.npy
+        path_X = MCWS_PlanetData_Stock/Duna/va.npy
+        path_Y = MCWS_PlanetData_Stock/Duna/wa.npy
+        path_Z = MCWS_PlanetData_Stock/Duna/ua.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 10
+        sizeAlt = 6
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        modelTop = 33000
+        modelTop = 22000
         invertAltitude = true
         longitudeOffset = 180
     }
     Temperature_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Laythe/ta.npy
+        path = MCWS_PlanetData_Stock/Duna/ta.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 10
+        sizeAlt = 6
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.5
-        modelTop = 33000
+        modelTop = 22000
         invertAltitude = true
         longitudeOffset = 180
+        blendTemperatureWithStock = true
     }
+
     Pressure_Data
     {
-        path = MCWS_PlanetData/Binary/Stock/Laythe/hlpr.npy
+        path = MCWS_PlanetData_Stock/Duna/hlpr.npy
 
         sizeLon = 64
         sizeLat = 32
-        sizeAlt = 11
+        sizeAlt = 7
         timesteps = 24
         timestepLength = 3600
         initialOffset = 128
         scaleFactor = 1.6
-        modelTop = 31250
+        modelTop = 21000
         invertAltitude = true
         longitudeOffset = 180
     }
