--- a/Extras/MCWS_PlanetData_Stock/Kerbin/Kerbin.cfg
+++ b/Extras/MCWS_PlanetData_Stock/Kerbin/Kerbin.cfg
@@ -1,52 +1,52 @@
-MCWS_DATA:NEEDS[KcalbelohSystem]
+MCWS_DATA
 {
-    body = Suluco
-    tag = KcalbelohSystem
+    body = Kerbin
+    tag = Stock
     
     Wind_Data //X = north/south, Y = up/down, Z = east/west
     {
-        path_X = MCWS_PlanetData/Binary/KcalbelohSystem/Suluco/va.npy
-        path_Y = MCWS_PlanetData/Binary/KcalbelohSystem/Suluco/wa.npy
-        path_Z = MCWS_PlanetData/Binary/KcalbelohSystem/Suluco/ua.npy
+        path_X = MCWS_PlanetData_Stock/Kerbin/va.npy
+        path_Y = MCWS_PlanetData_Stock/Kerbin/wa.npy
+        path_Z = MCWS_PlanetData_Stock/Kerbin/ua.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 10
         timesteps = 24
-        timestepLength = 3000
+        timestepLength = 2700
         initialOffset = 128
-        scaleFactor = 1.6
-        modelTop = 26000
+        scaleFactor = 1.375
+        modelTop = 28000
         invertAltitude = true
-        verticalWindMultiplier = 5000
         longitudeOffset = 180
     }
     Temperature_Data
     {
-        path = MCWS_PlanetData/Binary/KcalbelohSystem/Suluco/ta.npy
+        path = MCWS_PlanetData_Stock/Kerbin/ta.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 10
         timesteps = 24
-        timestepLength = 3000
+        timestepLength = 2700
         initialOffset = 128
-        scaleFactor = 1.6
-        modelTop = 26000
+        scaleFactor = 1.375
+        modelTop = 28000
         invertAltitude = true
         longitudeOffset = 180
+        blendTemperatureWithStock = true
     }
     Pressure_Data
     {
-        path = MCWS_PlanetData/Binary/KcalbelohSystem/Suluco/hlpr.npy
+        path = MCWS_PlanetData_Stock/Kerbin/hlpr.npy
 
         sizeLon = 64
         sizeLat = 32
         sizeAlt = 11
         timesteps = 24
-        timestepLength = 3000
+        timestepLength = 2700
         initialOffset = 128
-        scaleFactor = 1.6
+        scaleFactor = 1.35
         modelTop = 23000
         invertAltitude = true
         longitudeOffset = 180
