begin adding some accessibility features

--- a/GameData/AdvancedAtmosphereTools/Localization/en-us.cfg
+++ b/GameData/AdvancedAtmosphereTools/Localization/en-us.cfg
@@ -59,6 +59,7 @@ Localization
 
         #LOC_AAT_DisplayAdjustedMarkers = Display Wind-Adjusted Prograde Indicators
         #LOC_AAT_AdjustedMarkersTip = If enabled, a Green Prograde and Retrograde marker will appear on the navball, displaying Prograde/Retrograde adjusted for wind.
+        #LOC_AAT_MarkerColor = Wind-Adjusted Prograde Marker Color
         #LOC_AAT_DisableWindWhenStationary = Disable Wind When Stationary
         #LOC_AAT_StationaryTip = If enabled, wind forces will not be calculated when the craft is landed or splashed down and moving at less than 5m/s.
         #LOC_AAT_LonLatUnits = Longitude/Latitude Units
